# aviation_agentic_ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GOALS.md  LICENSE  Makefile  README.md  TASKS.md  THIRD_PARTY.md  pyproject.toml
configs/: default.yaml  entity_aliases.yaml  extraction_profile.yaml  ontology_generation.yaml
docs/: benchmark_design.md  benchmark_manual_review_protocol.md  chunking_experiment_protocol.md  document_expansion_protocol.md  evaluation_protocol.md  experiment_workflow.md  graph_traversal_retrieval.md  llm_review_protocol.md  nasa_aerodynamics_source_scope.md  ontology_boundary_nasa.md  ontology_design.md  pdf_extraction_backend_policy.md  thesis_positioning.md
reports/: code-review-2026-05-31.md  fix-evaluation-2026-05-31.md  security_rag_audit_2026-05-31.md
scripts/: build_defense_deck.mjs
tests/: test_academic_outputs.py  test_benchmark_validation.py  test_bootstrap_ci.py  test_chunking.py  test_chunking_comparison.py  test_config.py  test_cost_latency.py  test_curated_ontology.py  test_evaluation_protocol_metrics.py  test_evidence_cards.py  test_evidence_eval.py  test_experiment_protocol.py  test_experimental_expansion.py  test_final_evaluation.py  test_generation_run_reporting.py  test_gold_draft.py  test_graph_traversal.py  test_graphrag_review.py  test_hybrid_cli.py  test_hybrid_rag_reporting.py  test_hybrid_retrieval.py  test_io_utils.py  test_json_extraction.py  test_json_utils.py  test_kg_extraction.py  test_llm_providers.py  test_llm_review_reports.py  test_metric_edge_cases.py  test_nasa_sources.py  test_ontology_stats.py  (+20 more)
(+441 files in other folders)
