[project]
name = "aviation-agentic-ai"
version = "0.1.0"
description = "CLI-first aviation ontology, KG, and GraphRAG research prototype."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jiale" }
]
dependencies = [
  "click>=8.1",
  "docling>=2.96.0",
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rdflib>=7.0",
]

[project.optional-dependencies]
ontology-generation = [
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "langgraph>=0.2",
]
graphrag = [
  "chromadb>=0.5",
  "networkx>=3.2",
  "sentence-transformers>=3.0",
]
web = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
ontogpt = [
  "ontogpt>=1.1",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
aviation-ai = "aviation_agentic_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aviation_agentic_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
